Update demo
- Use Citrus 3.4.0
- Use Quarkus 2.16
- Add nutrition score
- Fix Patternfly styles
